Maybe i fixed the direction of alignment of the elements

--- a/style.css
+++ b/style.css
@@ -40,6 +40,7 @@ div {
 
 #total {
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
+    flex-direction: column;
 }
